objects/CPQSAPLandingPageCS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This is using is CPQSAPLandingPageCtrl</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decimal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decimal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <label>FieldAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <label>ObjectAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLParameter__c</fullName>
        <label>URLParameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQSAPLandingPageCS</label>
</CustomObject>